Learning the basic of Html

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,14 +1,20 @@
-<div style='border: 10px solid green'>
-	<% if @visitor %>
-		Hello, <%= @visitor %>!
-<% else %>
-	<form action="/hello">
-		My name is <%= @name %>.
-		What's your name?
-		<input type="text" name="name">
-		<input type="submit">
-	</form>
-<% end %>
-
-	<img src='http://localhost:4567/images/kitten.png'>
-</div>
+<html>
+	<head>
+		<title> This is my kitten page </title>
+	</head>
+	<body>
+		<div style='border: 10px solid green'>
+			<% if @visitor %>
+				Hello, <%= @visitor %>!
+			<% else %>
+				<form action="/hello">
+					My name is <%= @name %>.
+					What's your name?
+					<input type="text" name="name">
+					<input type="submit">
+				</form>
+			<% end %>
+			<img src='images/kitten.png'>
+		</div>
+	</body>
+</html>
